Fix z-indexing

--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@
   background-position: center;
   position: relative;
   padding: 20px;
+  z-index: -1;
 }
 
 @keyframes glitch {
